--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/ic_instagram.svg":["assets/ic_instagram.svg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/11.png":["assets/11.png"],"assets/2.png":["assets/2.png"],"assets/logosvg.svg":["assets/logosvg.svg"],"assets/mas.svg":["assets/mas.svg"],"assets/mast.svg":["assets/mast.svg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
